<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textFromName"
                android:layout_width="41dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:gravity="center"
                android:text="@string/info_from"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/pick_departure_stop_TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/textFromName"
                android:text="departure_stop_TextView"
                android:textSize="20sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textToName"
                android:layout_width="41dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/info_to"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/pick_arrival_stop_TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/textToName"
                android:text="arrival_stop_TextView"
                android:textSize="20sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:layout_marginTop="10dp">


            <TextView
                android:id="@+id/pick_departure_time_TextView"
                android:layout_width="168dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:gravity="right"
                android:text="time"
                android:textSize="27sp" />

            <TextView
                android:id="@+id/separator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/pick_departure_time_TextView"
                android:layout_toEndOf="@+id/pick_departure_time_TextView"
                android:gravity="center"
                android:text=" - "
                android:textSize="27sp" />

            <TextView
                android:id="@+id/pick_arrival_time_TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/pick_departure_time_TextView"
                android:layout_toEndOf="@+id/separator"
                android:gravity="left"
                android:text="arrival_time"
                android:textSize="27sp" />


        </RelativeLayout>


        <RelativeLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:gravity="right"
                android:id="@+id/textDistanceName"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/distance" />

            <TextView
                android:gravity="center"
                android:id="@+id/pick_distance_TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/textDistanceName"
                android:text="distance_TextView" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:gravity="right"
                android:id="@+id/textTravelTimeName"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/travel_time" />

            <TextView
                android:gravity="center"
                android:id="@+id/pick_duration_time_TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/textTravelTimeName"
                android:text="duration_time_TextView" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:gravity="right"
                android:id="@+id/textTravelLineName"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/travel_line" />

            <TextView
                android:gravity="center"
                android:id="@+id/pick_line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/textTravelLineName"
                android:text="line" />
        </RelativeLayout>

    </LinearLayout>
</RelativeLayout>