<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity"
    android:fitsSystemWindows="true">
    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
    </android.support.design.widget.AppBarLayout>
    <include
        layout="@layout/content_main"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" />
    <RelativeLayout
        android:layout_below="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:id="@+id/formRelativeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/textNameFrom"
                    android:layout_width="49dp"
                    android:layout_height="46dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="0dp"
                    android:gravity="center"
                    android:text="@string/info_from"
                    android:textSize="25sp" />
                <AutoCompleteTextView
                    android:id="@+id/autoFrom"
                    android:layout_width="335dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="49dp" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/toRelativeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/textNameTo"
                    android:layout_width="49dp"
                    android:layout_height="46dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="0dp"
                    android:gravity="center"
                    android:text="@string/info_to"
                    android:textSize="25sp" />
                <AutoCompleteTextView
                    android:id="@+id/autoTo"
                    android:layout_width="335dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="49dp" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/buttonSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/butTEST"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:onClick="clickSearch"
                    android:text="@string/button_search" />
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>
    <android.support.v7.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="103dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        app:columnCount="3">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <Button
                android:id="@+id/butFind"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="clickRozklad"
                android:text="Przystanki" />
            <Button
                android:id="@+id/butRozklad"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_weight="1"
                android:onClick="clickRozklad"
                android:text="Rozkład" />
            <Button
                android:id="@+id/butSave"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="clickRozklad"
                android:text="Button" />
        </LinearLayout>
    </android.support.v7.widget.GridLayout>
    <TextView
        android:id="@+id/textDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="40dp"
        />
    <TextView
        android:id="@+id/textTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/butTime"
        android:layout_alignEnd="@+id/textDate"
        />
    <Button
        android:id="@+id/butTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/butDate"
        android:layout_alignStart="@+id/butDate"
        android:onClick="clickRozklad"
        android:text="@string/button_set_time" />
    <Button
        android:id="@+id/butDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="49dp"
        android:onClick="clickRozklad"
        android:text="@string/button_set_date" />
</RelativeLayout>